--- a/assets/css/bargainparrot.css
+++ b/assets/css/bargainparrot.css
@@ -314,7 +314,7 @@ ol[role="list"] {
   }
 }
 
-.wrapper-wish {
+.main-content-wrapper {
   background-color: #dfe2e650;
   border-radius: 12px;
   padding: 1.5rem;
@@ -462,4 +462,27 @@ ol[role="list"] {
 .card-add-btn {
   padding-block: 5px;
   padding-inline: 15px;
+}
+
+.wishlist-empty {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 2.5rem;
+  text-align: center;
+  max-width: 35rem;
+  width: 100%;
+  margin-inline: auto;
+  padding-block: 2rem;
+  color: #6d6d6d;
+
+  h4 {
+    font-weight: 600;
+    font-size: 1.25rem;
+  }
+
+  p {
+    font-size: 0.875rem;
+  }
 }
