--- a/assets/css/bargainparrot.css
+++ b/assets/css/bargainparrot.css
@@ -209,7 +209,7 @@ ol[role="list"] {
 /********************* USER PROFILE ************** */
 .user-profile {
   background-color: #dfe2e650;
-  height: calc(100vh - 115px);
+  min-height: calc(100vh - 115px);
   display: flex;
   gap: 0.8rem;
 }
@@ -224,7 +224,6 @@ ol[role="list"] {
 }
 
 .sidebar-nav {
-  /* outline: 1px solid red; */
   margin-top: 2.2rem;
   display: flex;
   flex-direction: column;
@@ -317,11 +316,13 @@ ol[role="list"] {
 .main-content-wrapper {
   background-color: #dfe2e650;
   border-radius: 12px;
-  padding: 1.5rem;
+  padding-inline: 1.5rem;
+  padding-block: 3rem;
   gap: 1.5rem;
   display: flex;
   flex-direction: column;
-  min-height: 20rem;
+  margin-bottom: 5rem;
+  min-height: 30rem;
 }
 
 .wishlist-card {
@@ -489,4 +490,94 @@ ol[role="list"] {
     width: 15rem;
     font-weight: 600;
   }
+}
+
+/****************** REFERRAL  ********************/
+.referral {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  gap: 1.5rem;
+  text-align: center;
+  max-width: 35rem;
+  width: 100%;
+  margin-inline: auto;
+  color: #6d6d6d;
+
+  h3 {
+    font-weight: 600;
+    font-size: 1.25rem;
+  }
+
+  p {
+    font-size: 0.875rem;
+  }
+
+  button {
+    width: 15rem;
+    font-weight: 600;
+  }
+}
+
+.referral-socials,
+.referral-link-wrapper {
+  background-color: #fff;
+  min-width: 40rem;
+  width: 100%;
+  border-radius: 10px;
+  padding-block: 3rem;
+  padding-inline: 2rem;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+}
+.referral-socials__icons {
+  display: flex;
+  gap: 1rem;
+}
+
+.referral-link-wrapper {
+  align-items: flex-start;
+}
+
+.referral-link {
+  display: flex;
+  justify-content: space-between;
+  outline: 1px solid red;
+  width: 100%;
+  align-items: center;
+  border: 1px solid #fc4100;
+  background: #fc41001a;
+  color: #fc4100;
+  padding-inline: 1rem;
+  border-radius: 4px;
+  padding-block: 10px;
+  font-size: 0.75rem;
+}
+
+.referral-icon {
+  background: #fc41001a;
+  width: 2rem;
+  height: 2rem;
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: #fc4100;
+}
+
+.line-wrapper {
+  display: flex;
+  align-items: center;
+  gap: 1.5rem;
+  color: #a5a5a5;
+}
+
+.line {
+  width: 200px;
+  height: 1px;
+  background-color: #d3d3d3;
+  display: flex;
 }
