--- a/assets/css/bargainparrot.css
+++ b/assets/css/bargainparrot.css
@@ -1,3 +1,59 @@
+  /****Color Styles*/
+
+  /****Bargain Parrot Dark Orange Text****/
+  .bp-text-dark {
+    color: #FC4100;
+  }
+
+  /****Bargain Parrot Ligh Orange Text****/
+  .bp-text-light {
+    color: #FFC75F;
+  }
+
+
+/****Buttons****/
+  .bp-btn-dark {
+    background-color: #FC4100;
+    color: white;
+    font-weight: 300;
+  }
+
+  .bp-btn-dark:hover {
+    background-color: #FFC75F;
+  }
+
+  .bp-btn-light {
+    background-color: #FFC75F;
+    color: white;
+    font-weight: 100;
+  }
+
+  .bp-btn-light:hover {
+    background-color: #FC4100;
+  }
+
+  /*Bargain Parrot Dark Orange Background*/
+  .bp-bg-dark {
+    background-color: #FC4100;
+  }
+
+  /*Bargain Parrot Light Orange Background*/
+  .bp-bg-light {
+    background-color: #FFC75F;
+  }
+
+  a {
+    text-decoration: none;
+    color: #FC4100;
+  }
+
+  .sora-font {
+    font-family: "Sora", sans-serif;
+    font-optical-sizing: auto;
+    font-weight: 100;
+    font-style: normal;
+  }
+
 .nav-input-container {
     display: flex;
     align-items: center;
@@ -64,164 +120,41 @@
     margin-right: 10px;
   }
 
-  /*Login styles starts*/
-  .container{
-  width: 100%;
-  height: 100vh;
-  background-color: black;
-  background-size: cover;
-  position: relative;
-}
-.close{
-  display: flex;
-  position: relative;
-  justify-content: flex-end;
-}
-.close i{
-    width: 47px;
-  height: 47px;
-}
-.about{
-  background-color: var(--clr-secondary-100);
-  border-radius: 5px;
-  margin:20px;
-  padding:15px;
-  border:2px solid var(--clr-primary-100);
-}
-.about h3{
-  color:var(--clr-primary-100);
-  text-align: center;
-}
-.heading h2{
-color: #6D6D6D;
-}
-.main{
-  width: 90%;
-  max-width: 600px;
-  position: absolute;
-  left:50%;
-  top: 50%;
-  transform: translate(-50%,-50%);
-  padding: 50px 60px 70px;
-  text-align: center;
-  background: #fff;
-  border-radius: 5px;
+/*Login Styles*/
+#userLogin {
+
+  .modal_closebtn { 
+    font-size: 2em;
+  }
+
+  .social_login button {
+    border-width: 2px;
+  }
+
+  .social_login button:hover {
+    background-color: transparent;
+  }
  
-}
-.heading{
-  text-align: left;
-}
-.heading h2{
-font-size: 30px;
-font-family: var( --ff-secondary);
-margin-bottom: 20px;
-}
-.heading p{
-font-size: 13px;
-font-weight: 300;
-line-height: 15.6px;
+  .form-control {
+    border: 2px solid #00000010;
+    background-color: #F6F6F6;
+  }
+
+  .form-control:focus {
+    border-color: none !important;
+    box-shadow: none !important;
+  }
+
+  .togglePassword {
+    position: absolute;
+    top: 50%;
+    right: 10px;
+    transform: translateY(-50%);
+    cursor: pointer;
+  }
+
+  button:hover{
+    background-color: #FFC75F;
+  }
 
 }
-.heading p span{
- color:#FC4100;
- font-size: 13px;
-font-weight: 600;
-line-height: 15.6px;
-}
-.socials{
-  display: flex;
-  padding: 30px 0px;
-  gap: 35px;
-  
-}
-.google{
-    border:2px solid #FFC107;
-    padding:10px 50px 5px 50px;
-    border-radius: 5px;
-    margin-right:20px;
-    width: 155.33px;
-    height: 46px;
-}
-.google img{
-    width: 24px;
-    height: 24px;
-    object-fit: contain;
-   }
-.facebook{
-    border:2px solid #3B5998;
-      padding:10px 50px 5px 50px;
-    border-radius: 5px;
-     margin-right:20px;
-      width: 155.33px;
-    height: 46px;
-}
-.apple{
-  border:2px solid #333333;
-    padding:10px 50px 5px 50px;
-    border-radius: 5px;
-     width: 155.33px;
-    height: 46px;
-    margin-right:20px;
-}
-form{
-  display: flex;
-  flex-direction: column;
-}
-.input-field{
-  margin:15px 0;
-  border-radius: 5px;
-  display:flex;
-  align-items: center;
-  background: #ededed;
-  padding-left: 5px;
-  padding-right: 5px;
-  border:1px solid grey;
-}
-input{
-  width:100%;
-  background: transparent;
-  border:0;
-  outline: 0;
-  padding:18px 15px;
-}
-.mail{
-  background-color: whitesmoke;
-  border-radius: 5px;
-}
-.confirm{
-  display:flex;
-  flex-direction: row;
-  position: relative;
-}
-.confirm .Remember{
-    font-size: 14px;
-    margin-right: 250px;
-    margin-left: 5px;
-    font-weight: 300;
-    line-height: 18.2px;
-}
-.confirm p a{
-  color: #FC4100;
-  font-size: 12px;
-  font-weight: 400;
-  text-decoration: none;
-  font-size: 15px;
-  line-height: 19.5px;
-}
-.tick{
-  width: 18px;
-  height: 18px;
-}
-.btn-field{
-  background-color: red;
-  color: white;
-  height: 50px;
-  border: 1px;
-  border-radius:5px;
-  margin-top: 20px;
-  padding: 0;
-}
-#myCheckbox {
-    accent-color: #6D6D6D;
-}
-  /*Login styles ends*/
